# bsim-eval

./: .gitignore  .gitmodules  README.md
ghidra_scripts/: .QueryAllFunctions.java.swp  QueryAllFunctions.java  QueryFunction.py  Test.java
results/: .gitignore  README.md  sqlite-00v01.txt  sqlite-00v02.txt
results/all-rust/: all-bat.txt  all-egg.txt  all-hyper.txt  descriptive.txt
results/bat/: bat-O0v01.txt  bat-O0v02.txt  bat-O0v03.txt
results/bat/arm/: bat-O0vO0-arm.txt  bat-O0vO1-arm.txt  bat-O0vO2-arm.txt  bat-O0vO3-arm.txt  bat-stdlib-O1.txt  bat-stdlib-O2.txt  bat-stdlib-O3.txt  descriptive.txt
results/bat/x64/: bat-O0vO0-x64.txt  bat-O0vO1-x64.txt  bat-O0vO2-x64.txt  bat-O0vO3-x64.txt  descriptive.txt
results/coreutils/: descriptive.txt
results/coreutils-rs/: .coreutils-rs-x86_64-O1vO3.swp  descriptive.txt
results/correlation/: all-results.txt
results/egg/arm/: descriptive.txt  egg-O0vO1.txt  egg-O0vO3.txt
results/egg/x64/: descriptive.txt  egg-O0vO0.txt
results/hyper/arm/: descriptive.txt  hyper-O0vO0-arm.txt  hyper-O0vO1-arm.txt  hyper-O0vO2-arm.txt  hyper-O0vO3-arm.txt
results/hyper/x64/: descriptive.txt  hyper-O0vO0-x64.txt  hyper-O0vO1-x64.txt  hyper-O0vO2-x64.txt  hyper-O0vO3-x64.txt
results/scripts/: data_analysis.py
results/sqlite/: sqlite-O0vO0.txt
results/sqlite/arm/: sqlite-O0vO0-arm.txt  sqlite-O0vO1-arm.txt  sqlite-O0vO2-arm.txt  sqlite-O0vO3-arm.txt  sqlite-O0vO3.txt
scripts/: collect_dups.py  correlation.py  data_analysis.py
signatures/dumps/: sigs_egg-O0-arm  sigs_egg-O1-arm  sigs_egg-O1-x64  sigs_sqlite-O0-arm  sigs_sqlite-O0-x64
src/: build.sh
src/bat/: Cargo.toml  README.md
src/coreutils-rs/: Cargo.toml
src/egg/: Cargo.toml
src/egg/src/: main.rs
src/hyper/: Cargo.toml  README.md
src/sqlite/: Makefile  README.md
(+71 files in other folders)
