[package]
name = "egg"
version = "0.1.0"
edition = "2021"

[dependencies]
egg = "0.9.5"

[profile.dev]
strip = "none"
lto = "off"

[profile.opt0]
inherits = "dev" 
opt-level = 0

[profile.opt1]
inherits = "dev" 
opt-level = 1

[profile.opt2]
inherits = "dev" 
opt-level = 2

[profile.opt3]
inherits = "dev" 
opt-level = 3
