[package]
name = "hyper-application"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

[profile.dev]
strip = "none"
lto = "off"

[profile.zero]
inherits = "dev" 
opt-level = 0

[profile.one]
inherits = "dev" 
opt-level = 1

[profile.two]
inherits = "dev" 
opt-level = 2

[profile.three]
inherits = "dev" 
opt-level = 3
